fixed banner on mobile

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -456,28 +456,34 @@ footer {
   body {
   }
 
-  header{
-    position: relative;
-    padding: 5px 0px;
-    min-height: 0px;
+//   header{
+//     position: relative;
+//     padding: 5px 0px;
+//     min-height: 0px;
 
-    h1 {
-      font-size: 24px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      -o-text-overflow: ellipsis;
-      -ms-text-overflow: ellipsis;
+//     h1 {
+//       font-size: 24px;
+//       white-space: nowrap;
+//       overflow: hidden;
+//       text-overflow: ellipsis;
+//       -o-text-overflow: ellipsis;
+//       -ms-text-overflow: ellipsis;
+//     }
+//   }
+
+//   section {
+//     margin-top: 5px;
+//   }
+
+  #banner { 
+    //   display: none;
+    .button {
+        font-size: 50%;
     }
   }
-  section {
-    margin-top: 5px;
-  }
-
-  #banner { display: none;}
-  header ul {
-    display:none;
-  }
+//   header ul {
+//     display:none;
+//   }
 }
 
 @media print {
